--- a/style.css
+++ b/style.css
@@ -6,13 +6,17 @@
 #cardContainer{
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 2);
     transition: 0.3s;
+    padding-top: 8vh;
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
 
 }
 #cardContainer:hover{
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 2);
 }
 
-.output{
+#output{
     border: 4px solid black;
     height: 10vh;
     width: 10vh;
