--- a/style.css
+++ b/style.css
@@ -1,18 +1,36 @@
 *{
     margin: 0px;
     padding: 0px;
+}
+.center{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.main{
+    width: 100%;
+    height: 100vh;
+    background-color: sandybrown;
+    border-radius: 10px;
+}
+.card{
+    width: 350px;
+    height: 400px;
+    background: white;
+    cursor: pointer;
+    position: relative;
+    flex-direction: column;
+    overflow: hidden;
     text-align: center;
-}
-#cardContainer{
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 2);
-    transition: 0.3s;
-    padding-top: 8vh;
-    width: 60%;
-    margin-left: auto;
-    margin-right: auto;
-
-}
-#cardContainer:hover{
-    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 2);
+    box-shadow: 8px 0px 50px rgba(0,0, 0, 2);
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
+.card:hover{
+    transition: all 0.3s;
+    transform:  translate(-50px)  translateY(0);
+}
+.card h1{
+    top: 200px;
+}
