--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Redressed&display=swap');
 *{
     margin: 0px;
     padding: 0px;
@@ -37,6 +38,7 @@ footer a{
     box-shadow: 8px 0px 50px rgba(0,0, 0, 2);
     padding-top: 10px;
     padding-bottom: 10px;
+    font-family: 'Redressed', cursive;
 }
 
 .card:hover{
@@ -45,4 +47,9 @@ footer a{
 }
 .card h1{
     top: 200px;
+    text-shadow: sandybrown;
+}
+
+#output{
+    font-size: larger;
 }
